core/assets/css/content.css
a.icon,
span.icon,
div.icon {
	display:block;
	float:left;
	clear:none;
	width:18px;
	height:18px;
}

.link {
	cursor:pointer;
}

.contentMessage {
	clear:both;
	margin:10px;
	padding:10px 10px 10px 50px;
	background-color:#E3EACE;
	border:2px dashed #D3DACE;	
	font-weight:bold;
	background-image:url(../img/icons.png);
	background-position:15px -620px;
	background-repeat:no-repeat;
}



/* -----------------
	Listings
   -----------------*/

ul.ulList {}
ul.ulList li.listItem {
	overflow:hidden;
	line-height:18px;
}
* html ul.ulList li.listItem {
	overflow:visible;
	height:1%;
}
ul.ulList li.listItem span {
	display:block;
	float:left;
}
ul.ulList li.listItemHeader {}
ul.ulList li.listItemHeader span {
	font-weight:bold;
}

/* -----------------------------
	Editable / linked items
   ----------------------------- */
li.listItem .editableItem span,
li.listItem a .editableItem span {
    padding-left:20px;
    background:#fff url('../img/sprite-icons.png') no-repeat -58px -360px !important;
}

li.listItem a:hover span {
	background-color:#f2f2d2 !important;
}



/* -----------------
	Box
   -----------------*/

div.infoBox {
	margin:0.5em 0;
	border:1px solid #e1e1e1;
}

div.infoBox h4 {
	margin:0;
}

div.infoBox div.content {
	padding:0.5em;
}



/* -----------------
	Heading
   -----------------*/

h1 {
	position:relative;
	overflow:hidden;
}

.headerLine span, .headerOptLine span {
	float:left;
	margin:0 0 0 5px;
	line-height:28px;
}

.headerLine span.first, .headerOptLine span.first {
	padding:0 0 0 20px;
}

.headerLine {
	position:relative;
	margin-top:5px;
	width:100%;
	height:28px;
	background:url('../img/bg_headerline.png') no-repeat 0% 0%;
	text-align:left;
}

.headerLine label {
	text-transform:uppercase;
	font-size:10px;
	letter-spacing:0.3px;
}

.headerLine span.rgt {
	position:absolute;
	right:0;
	display:block;
	margin:0;
	padding:0;
	background:#fff url('../img/bg_headerline.png') no-repeat 100% 0%;
	width:10px;
	height:28px;
}

.headerLine th.last,
.headerLine td.last {
	background:#fff url('../img/bg_headerline.png') no-repeat 100% 0%;
}

.headerLine th, .headerOptLine th {
	font-size:10px;
	font-weight:normal;
	text-transform:uppercase;
	white-space:nowrap;
}

.headerLine input { margin-right:10px; }

.headerOptLine {
	position:relative;
	margin-top:5px;
	width:100%;
	height:28px;
	background:url('../img/bg_headerline.png') no-repeat 0% -46px;
	text-align:left;
}

.headerOptLine span.rgt {
	position:absolute;
	right:0;
	display:block;
	margin:0;
	padding:0;
	background:#fff url('../img/bg_headerline.png') no-repeat 100% -46px;
	width:10px;
	height:28px;
}

.headerOptLine th.last,
.headerOptLine td.last {
	background:#fff url('../img/bg_headerline.png') no-repeat 100% -46px;
}


	/* Title */
div.title {
	font-size:18px;
	font-weight:bold;
	color:#333;
	display:inline-block;
	border-bottom:1px solid #000;
	margin:15px 0 10px 0;
	padding-left:10px;
	width:97%;
}



	/* h3 */
.headLabel span {
	display:block;
	float:left;
	overflow:hidden;
}

span.infoIcon {
	background:url('../img/sprite-icons.png') no-repeat -60px -330px !important;
}


.calendaricon {
	background:url('../img/icons.png') no-repeat 0 -690px;
}

